Fixes margin overflowing bottom of screen

--- a/src/dashboards/Chrono/ChronoDashboard.scss
+++ b/src/dashboards/Chrono/ChronoDashboard.scss
@@ -5,6 +5,7 @@
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+    padding-bottom: 5rem;
 
     &__tiles {
         display: flex;
@@ -37,9 +38,9 @@
         transition: height 200ms ease;
     }
 
-    .react-grid-layout:last-child {
-        margin-bottom: 5rem;
-    }
+    // .react-grid-layout:last-child {
+    //     margin-bottom: 5rem;
+    // }
 
     .react-grid-item {
         transition: all 200ms ease;
