--- a/src/dashboards/Compact/CompactDashboard.scss
+++ b/src/dashboards/Compact/CompactDashboard.scss
@@ -5,6 +5,7 @@
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+    padding-bottom: 5rem;
 
     &__tiles {
         display: block;
@@ -43,10 +44,6 @@
     .react-grid-layout {
         position: relative;
         transition: height 200ms ease;
-    }
-
-    .react-grid-layout:last-child {
-        margin-bottom: 5rem;
     }
 
     .react-grid-item {
